- fix(header): Makes all header links reachable on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,12 +46,11 @@ nav {
 }
 
 @media screen and (max-width: 700px) {
-    
     .line {
         width: 30px;
         height: 3px;
         margin: 5px;
-        background: black;
+        background: white;
     }
 
     nav {
@@ -75,7 +74,7 @@ nav {
         flex-direction: column;
         clip-path: circle(100px at 90% -30%);
         -webkit-clip-path: circle(100px at 90% -30%);
-        transition: all 1s ease-out;
+        transition: all 0.7s ease-out;
         pointer-events: none;
     }
 
